2007-10-23  Richard Stallman  <rms@gnu.org>

	* gnus-group.el (gnus-group-highlight): Mark as risky.

2007-10-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-fancy-expiry-target): Use rmail-dont-reply-to to
	exclude address matching message-dont-reply-to-names.

2007-10-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-string<): New function.

	* gnus-sum.el (gnus-article-sort-by-author)
	(gnus-article-sort-by-subject): Use it.

2007-10-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-win.el (gnus-configure-windows): Focus on the frame for which
	the frame-focus tag is set in gnus-buffer-configuration.

2007-10-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-charset-synonym-alist): Alias gbk to cp936.

2007-10-04  Reiner Steib  <Reiner.Steib@gmx.de>

        * Relicense "GPLv2 or later" files to "GPLv3 or later".

2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-newsgroup-maximum-articles): Move from gnus.el.
	Suggested by Leo <sdl.web@gmail.com>.

	* gnus.el: Do.

2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-newsgroup-maximum-articles): Rename from
	gnus-maximum-newsgroup.  Suggested by Leo <sdl.web@gmail.com>.

	* gnus-agent.el (gnus-agent-fetch-headers): Do.

	* gnus-sum.el (gnus-articles-to-read, gnus-list-of-unread-articles)
	(gnus-list-of-read-articles, gnus-sequence-of-unread-articles): Do.

2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmbox.el (nnmbox-request-article): Don't assume delim regexp matches
	newline.
	(nnmbox-request-accept-article): Don't change article in source buffer;
	narrow to header to use message-fetch-field rather than
	nnmail-fetch-field; use with-current-buffer instead of save-excursion.
	(nnmbox-request-replace-article): Quote lines that'll be misidentified
	as delimiters; make sure article ends with newline.
	(nnmbox-delete-mail): Correct last position of article to be deleted;
	ignore X-Gnus-Newsgroup header in article body.